# spm-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.csv  benchmark.sh  bld.sh  spm_project
files/: test.txt
src/: main.cpp
src/fastflow/: HuffmanFarm.cpp  HuffmanFarm.h  HuffmanFastFlow.cpp  HuffmanFastFlow.h  HuffmanMonode.cpp  HuffmanMonode.h  HuffmanParFor.cpp  example.cpp
src/sequential/: HuffmanSequential.cpp  HuffmanSequential.h  huffman-sequential.cpp  huffman-sequential.h
src/thread/: HuffmanGMR.cpp  HuffmanGMR.h  HuffmanParallel.cpp  HuffmanParallel.h  HuffmanThread.cpp  huffman-threads.cpp  huffman-threads.h
src/utils/: huffman-commons.cpp  huffman-commons.h  utils.cpp  utils.h  utimer.cpp
